// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArtifactsSelection tests artifact list renders with proper payload 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
    >
      <div
        class="artifactList listHeader"
      >
        <span
          class="tableHeader"
        />
        <span
          class="tableHeader"
        >
          artifactRepository
        </span>
        <span
          class="tableHeader"
        >
           
          location
        </span>
        <span
          class="tableHeader"
        />
        <span
          class="tableHeader"
        />
      </div>
      <div
        class="Layout--vertical StyledProps--main"
      >
        <section>
          <section
            class="artifactList rowItem"
          >
            <div>
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main type StyledProps--color StyledProps--color-black"
                style="--text-line-clamp: 1; width: 200px;"
              >
                primary
              </p>
            </div>
            <div
              class="connectorNameField"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--padding-right-small"
                data-icon="ecr-step"
              >
                <svg
                  fill="#fff"
                  fill-rule="evenodd"
                  height="18"
                  stroke="#000"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  viewBox="0 0 85 85"
                  width="18"
                >
                  <style>
                    .ecr-step_svg__B{stroke:none}.ecr-step_svg__C{fill:#f58536}
                  </style>
                  <use
                    x="2.5"
                    xlink:href="#ecr-step_svg__A"
                    y="2.5"
                  />
                  <symbol
                    id="ecr-step_svg__A"
                    overflow="visible"
                  >
                    <g
                      class="ecr-step_svg__B"
                      fill="#9d5025"
                    >
                      <path
                        d="M0 41.579C0 20.293 17.84 3.157 40 3.157s40 17.136 40 38.422S62.16 80 40 80 0 62.864 0 41.579z"
                      />
                      <path
                        d="M0 38.422h80v3.157H0z"
                      />
                    </g>
                    <path
                      class="ecr-step_svg__B ecr-step_svg__C"
                      d="M0 38.422C0 17.136 17.84 0 40 0s40 17.136 40 38.422-17.84 38.422-40 38.422S0 59.707 0 38.422z"
                    />
                    <path
                      class="ecr-step_svg__B"
                      d="M42.589 34.255h-5.166L34.65 11.364h10.713l-2.774 22.891z"
                    />
                    <path
                      class="ecr-step_svg__B"
                      d="M63.135 51.111l2.064-1.641-7.48-10.732-16.379-5.492L40 41.932l14.762 1.326 8.373 7.853zm-46.27 0l-2.051-1.641 7.466-10.732 16.379-5.492L40 41.932l-14.762 1.326-8.373 7.853zm15.708-39.747c0-3.952 3.312-7.134 7.427-7.134s7.427 3.182 7.427 7.134-3.312 7.134-7.427 7.134-7.427-3.182-7.427-7.134z"
                    />
                    <path
                      class="ecr-step_svg__B ecr-step_svg__C"
                      d="M40 19.129c-4.465 0-8.084-3.477-8.084-7.765S35.535 3.599 40 3.599s8.084 3.476 8.084 7.765c-.007 4.286-3.622 7.758-8.084 7.765zm0-14.268c3.739 0 6.77 2.911 6.77 6.503s-3.031 6.502-6.77 6.502-6.77-2.911-6.77-6.502S36.261 4.862 40 4.862h0zm-2.432 6.503c0-1.294 1.085-2.336 2.432-2.336s2.432 1.042 2.432 2.336S41.347 13.7 40 13.7s-2.432-1.042-2.432-2.336z"
                    />
                    <path
                      class="ecr-step_svg__B"
                      d="M34.65 37.5c0-2.847 2.386-5.139 5.35-5.139s5.35 2.292 5.35 5.139-2.386 5.139-5.35 5.139-5.35-2.292-5.35-5.139z"
                    />
                    <path
                      class="ecr-step_svg__B ecr-step_svg__C"
                      d="M40 43.27c-3.312-.007-5.994-2.588-5.994-5.77s2.682-5.763 5.994-5.77 6.006 2.563 6.02 5.745c.004 1.536-.629 3.01-1.759 4.097S41.599 43.27 40 43.27zm0-10.29c2.592-.007 4.699 2.005 4.706 4.495s-2.088 4.513-4.679 4.52-4.699-2.005-4.706-4.495 2.088-4.513 4.679-4.52zm-1.643 4.52c0-.874.733-1.578 1.643-1.578s1.643.704 1.643 1.578-.733 1.578-1.643 1.578-1.643-.704-1.643-1.578z"
                    />
                    <path
                      class="ecr-step_svg__B"
                      d="M22.741 49.344H57.26v18.321H22.741z"
                    />
                    <g
                      fill="#fbbf93"
                    >
                      <use
                        class="ecr-step_svg__B"
                        xlink:href="#ecr-step_svg__C"
                      />
                      <use
                        class="ecr-step_svg__B"
                        x="4.732"
                        xlink:href="#ecr-step_svg__C"
                      />
                      <use
                        class="ecr-step_svg__B"
                        x="9.477"
                        xlink:href="#ecr-step_svg__C"
                      />
                      <use
                        class="ecr-step_svg__B"
                        x="14.21"
                        xlink:href="#ecr-step_svg__C"
                      />
                      <use
                        class="ecr-step_svg__B"
                        x="18.942"
                        xlink:href="#ecr-step_svg__C"
                      />
                      <use
                        class="ecr-step_svg__B"
                        x="23.687"
                        xlink:href="#ecr-step_svg__C"
                      />
                      <use
                        class="ecr-step_svg__B"
                        x="28.419"
                        xlink:href="#ecr-step_svg__C"
                      />
                    </g>
                  </symbol>
                  <defs>
                    <path
                      d="M24.476 50.821h2.629v15.366h-2.629z"
                      id="ecr-step_svg__C"
                    />
                  </defs>
                </svg>
              </span>
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main connectorName"
                style="--text-line-clamp: 1;"
              >
                Test
              </p>
              <span
                class="bp3-icon bp3-icon-full-circle StyledProps--main StyledProps--color"
                icon="full-circle"
              >
                <svg
                  data-icon="full-circle"
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <desc>
                    full-circle
                  </desc>
                  <path
                    d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div>
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main"
                style="--text-line-clamp: 1; width: 400px;"
              >
                &lt;+input&gt;
              </p>
            </div>
            <span>
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main actionGrid"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="Edit"
                >
                  <svg
                    height="16"
                    viewBox="0 0 12 12"
                    width="16"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    >
                      <path
                        d="M8.66 1.823h0L2.244 8.239v1.75h1.75l6.416-6.416a1.75 1.75 0 00-1.75-1.75z"
                        stroke="#555770"
                      />
                      <path
                        d="M6.583 5.146l2.063-2.063"
                        opacity="0.3"
                        stroke="#606170"
                      />
                    </g>
                  </svg>
                </span>
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="bin-main"
                >
                  <svg
                    fill="none"
                    height="25"
                    viewBox="0 0 22 22"
                    width="25"
                  >
                    <g
                      opacity="0.6"
                    >
                      <mask
                        fill="#fff"
                        id="bin-main_svg__a"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M8.666 4.583a.5.5 0 01.5-.5h3.667a.5.5 0 01.5.5V5h2.25a.5.5 0 01.5.5v1.833a.5.5 0 01-.5.5H6.417a.5.5 0 01-.5-.5V5.5a.5.5 0 01.5-.5h2.25v-.417zm1 .5V5.5a.5.5 0 01-.5.5h-2.25v.833h8.167V6h-2.25a.5.5 0 01-.5-.5v-.417H9.666zm-3.75 4.083a.5.5 0 01.5-.5h9.167a.5.5 0 01.5.5v8.25a.5.5 0 01-.5.5H6.417a.5.5 0 01-.5-.5v-8.25zm1 .5v7.25h8.167v-7.25H6.916z"
                          fill-rule="evenodd"
                        />
                      </mask>
                      <path
                        d="M13.333 5h-1a1 1 0 001 1V5zM8.666 5v1a1 1 0 001-1h-1zm1 .083v-1a1 1 0 00-1 1h1zM6.916 6V5a1 1 0 00-1 1h1zm0 .833h-1a1 1 0 001 1v-1zm8.167 0v1a1 1 0 001-1h-1zm0-.833h1a1 1 0 00-1-1v1zm-2.75-.917h1a1 1 0 00-1-1v1zM6.916 16.916h-1a1 1 0 001 1v-1zm0-7.25v-1a1 1 0 00-1 1h1zm8.167 7.25v1a1 1 0 001-1h-1zm0-7.25h1a1 1 0 00-1-1v1zM9.166 3.083a1.5 1.5 0 00-1.5 1.5h2a.5.5 0 01-.5.5v-2zm3.667 0H9.166v2h3.667v-2zm1.5 1.5a1.5 1.5 0 00-1.5-1.5v2a.5.5 0 01-.5-.5h2zm0 .417v-.417h-2V5h2zm1.25-1h-2.25v2h2.25V4zm1.5 1.5a1.5 1.5 0 00-1.5-1.5v2a.5.5 0 01-.5-.5h2zm0 1.833V5.5h-2v1.833h2zm-1.5 1.5a1.5 1.5 0 001.5-1.5h-2a.5.5 0 01.5-.5v2zm-9.166 0h9.166v-2H6.417v2zm-1.5-1.5a1.5 1.5 0 001.5 1.5v-2a.5.5 0 01.5.5h-2zm0-1.833v1.833h2V5.5h-2zm1.5-1.5a1.5 1.5 0 00-1.5 1.5h2a.5.5 0 01-.5.5V4zm2.25 0h-2.25v2h2.25V4zm-1 .583V5h2v-.417h-2zm3 .917v-.417h-2V5.5h2zM9.166 7a1.5 1.5 0 001.5-1.5h-2a.5.5 0 01.5-.5v2zm-2.25 0h2.25V5h-2.25v2zm1-.167V6h-2v.833h2zm7.166-1H6.917v2h8.166v-2zm-1 .167v.833h2V6h-2zm-1.25 1h2.25V5h-2.25v2zm-1.5-1.5a1.5 1.5 0 001.5 1.5V5a.5.5 0 01.5.5h-2zm0-.417V5.5h2v-.417h-2zm-1.667 1h2.667v-2H9.666v2zm-3.25 1.583a1.5 1.5 0 00-1.5 1.5h2a.5.5 0 01-.5.5v-2zm9.167 0H6.416v2h9.167v-2zm1.5 1.5a1.5 1.5 0 00-1.5-1.5v2a.5.5 0 01-.5-.5h2zm0 8.25v-8.25h-2v8.25h2zm-1.5 1.5a1.5 1.5 0 001.5-1.5h-2a.5.5 0 01.5-.5v2zm-9.166 0h9.166v-2H6.417v2zm-1.5-1.5a1.5 1.5 0 001.5 1.5v-2a.5.5 0 01.5.5h-2zm0-8.25v8.25h2v-8.25h-2zm3 7.75v-7.25h-2v7.25h2zm7.166-1H6.917v2h8.166v-2zm-1-6.25v7.25h2v-7.25h-2zm-7.167 1h8.167v-2H6.916v2z"
                        fill="currentColor"
                        mask="url(#bin-main_svg__a)"
                      />
                      <g
                        opacity="0.3"
                      >
                        <mask
                          fill="#fff"
                          id="bin-main_svg__b"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M9.625 10.755a.5.5 0 01.5.5v4.062a.5.5 0 01-1 0v-4.062a.5.5 0 01.5-.5zm2.75 0a.5.5 0 01.5.5v4.062a.5.5 0 01-1 0v-4.062a.5.5 0 01.5-.5z"
                            fill-rule="evenodd"
                          />
                        </mask>
                        <path
                          d="M11.125 11.255a1.5 1.5 0 00-1.5-1.5v2a.5.5 0 01-.5-.5h2zm0 4.062v-4.062h-2v4.062h2zm-1.5 1.5a1.5 1.5 0 001.5-1.5h-2a.5.5 0 01.5-.5v2zm-1.5-1.5a1.5 1.5 0 001.5 1.5v-2a.5.5 0 01.5.5h-2zm0-4.062v4.062h2v-4.062h-2zm1.5-1.5a1.5 1.5 0 00-1.5 1.5h2a.5.5 0 01-.5.5v-2zm4.25 1.5a1.5 1.5 0 00-1.5-1.5v2a.5.5 0 01-.5-.5h2zm0 4.062v-4.062h-2v4.062h2zm-1.5 1.5a1.5 1.5 0 001.5-1.5h-2a.5.5 0 01.5-.5v2zm-1.5-1.5a1.5 1.5 0 001.5 1.5v-2a.5.5 0 01.5.5h-2zm0-4.062v4.062h2v-4.062h-2zm1.5-1.5a1.5 1.5 0 00-1.5 1.5h2a.5.5 0 01-.5.5v-2z"
                          fill="currentColor"
                          mask="url(#bin-main_svg__b)"
                        />
                      </g>
                    </g>
                  </svg>
                </span>
              </div>
            </span>
          </section>
        </section>
        <section>
          <section
            class="artifactList rowItem"
          >
            <div>
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main type StyledProps--color StyledProps--color-black"
                style="--text-line-clamp: 1; width: 200px;"
              >
                sidecar
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main artifactId"
                  style="--text-line-clamp: 1;"
                >
                  (
                  common.ID
                  : 
                  sidecarId
                  )
                </p>
              </p>
            </div>
            <div
              class="connectorNameField"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--padding-right-small"
                data-icon="service-dockerhub"
              >
                <svg
                  height="18"
                  viewBox="0 0 14 10"
                  width="18"
                >
                  <path
                    d="M5.8 3.3h1.3v1.3H5.8zM7.2 3.3h1.3v1.3H7.2zM4.3 3.3h1.3v1.3H4.3zM2.9 3.3h1.3v1.3H2.9zM1.4 3.3h1.3v1.3H1.4zM5.8 1.9h1.3v1.3H5.8zM5.8.4h1.3v1.3H5.8zM4.3 1.9h1.3v1.3H4.3zM2.9 1.9h1.3v1.3H2.9z"
                  />
                  <path
                    d="M.8 7.7c-.1-.2-.2-.3-.3-.4l-.1-.2c0-.1-.1-.2-.1-.4v-.2C.1 6.1 0 5.7 0 5.2v-.4h9.5c.7 0 1.4-.2 1.7-.5-.2-.2-.4-.6-.4-1 0-.5.1-1 .3-1.3l.1-.1.1.1c.3.2.9.8.9 1.6.3-.1.5-.1.8-.1.4 0 .7.1.9.2h.1v.1c-.3.6-1 .9-1.8.9h-.3c-1.2 3-3.7 4.6-7.3 4.6-.6 0-1.2-.1-1.8-.3-.7-.2-1.3-.6-1.8-1.1zm4.4 1.4c-.9-.4-1.3-.9-1.6-1.5-.4.1-.7.1-1.2.2H1.2C2 8.6 3 9.1 4.8 9.1zm-1-2.4c-.2 0-.3.2-.3.3 0 .2.2.3.3.3.2 0 .3-.2.3-.3s-.1-.3-.3-.3z"
                  />
                  <path
                    d="M4.2 6.8s.1 0 0 0c.1 0 .1.1 0 0 .1.2.1.2.2.2 0 0 .1 0 .1-.1V7c0 .1-.1.3-.3.3S4 7.2 4 7c0-.1.1-.2.2-.2"
                  />
                </svg>
              </span>
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main connectorName"
                style="--text-line-clamp: 1;"
              >
                connectorRef
              </p>
              <span
                class="bp3-icon bp3-icon-full-circle StyledProps--main StyledProps--color"
                icon="full-circle"
              >
                <svg
                  data-icon="full-circle"
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <desc>
                    full-circle
                  </desc>
                  <path
                    d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="locationField"
            >
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main"
                style="--text-line-clamp: 1; width: 400px;"
              >
                &lt;+input&gt;
              </p>
            </div>
            <span>
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main actionGrid"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="Edit"
                >
                  <svg
                    height="16"
                    viewBox="0 0 12 12"
                    width="16"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    >
                      <path
                        d="M8.66 1.823h0L2.244 8.239v1.75h1.75l6.416-6.416a1.75 1.75 0 00-1.75-1.75z"
                        stroke="#555770"
                      />
                      <path
                        d="M6.583 5.146l2.063-2.063"
                        opacity="0.3"
                        stroke="#606170"
                      />
                    </g>
                  </svg>
                </span>
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="bin-main"
                >
                  <svg
                    fill="none"
                    height="25"
                    viewBox="0 0 22 22"
                    width="25"
                  >
                    <g
                      opacity="0.6"
                    >
                      <mask
                        fill="#fff"
                        id="bin-main_svg__a"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M8.666 4.583a.5.5 0 01.5-.5h3.667a.5.5 0 01.5.5V5h2.25a.5.5 0 01.5.5v1.833a.5.5 0 01-.5.5H6.417a.5.5 0 01-.5-.5V5.5a.5.5 0 01.5-.5h2.25v-.417zm1 .5V5.5a.5.5 0 01-.5.5h-2.25v.833h8.167V6h-2.25a.5.5 0 01-.5-.5v-.417H9.666zm-3.75 4.083a.5.5 0 01.5-.5h9.167a.5.5 0 01.5.5v8.25a.5.5 0 01-.5.5H6.417a.5.5 0 01-.5-.5v-8.25zm1 .5v7.25h8.167v-7.25H6.916z"
                          fill-rule="evenodd"
                        />
                      </mask>
                      <path
                        d="M13.333 5h-1a1 1 0 001 1V5zM8.666 5v1a1 1 0 001-1h-1zm1 .083v-1a1 1 0 00-1 1h1zM6.916 6V5a1 1 0 00-1 1h1zm0 .833h-1a1 1 0 001 1v-1zm8.167 0v1a1 1 0 001-1h-1zm0-.833h1a1 1 0 00-1-1v1zm-2.75-.917h1a1 1 0 00-1-1v1zM6.916 16.916h-1a1 1 0 001 1v-1zm0-7.25v-1a1 1 0 00-1 1h1zm8.167 7.25v1a1 1 0 001-1h-1zm0-7.25h1a1 1 0 00-1-1v1zM9.166 3.083a1.5 1.5 0 00-1.5 1.5h2a.5.5 0 01-.5.5v-2zm3.667 0H9.166v2h3.667v-2zm1.5 1.5a1.5 1.5 0 00-1.5-1.5v2a.5.5 0 01-.5-.5h2zm0 .417v-.417h-2V5h2zm1.25-1h-2.25v2h2.25V4zm1.5 1.5a1.5 1.5 0 00-1.5-1.5v2a.5.5 0 01-.5-.5h2zm0 1.833V5.5h-2v1.833h2zm-1.5 1.5a1.5 1.5 0 001.5-1.5h-2a.5.5 0 01.5-.5v2zm-9.166 0h9.166v-2H6.417v2zm-1.5-1.5a1.5 1.5 0 001.5 1.5v-2a.5.5 0 01.5.5h-2zm0-1.833v1.833h2V5.5h-2zm1.5-1.5a1.5 1.5 0 00-1.5 1.5h2a.5.5 0 01-.5.5V4zm2.25 0h-2.25v2h2.25V4zm-1 .583V5h2v-.417h-2zm3 .917v-.417h-2V5.5h2zM9.166 7a1.5 1.5 0 001.5-1.5h-2a.5.5 0 01.5-.5v2zm-2.25 0h2.25V5h-2.25v2zm1-.167V6h-2v.833h2zm7.166-1H6.917v2h8.166v-2zm-1 .167v.833h2V6h-2zm-1.25 1h2.25V5h-2.25v2zm-1.5-1.5a1.5 1.5 0 001.5 1.5V5a.5.5 0 01.5.5h-2zm0-.417V5.5h2v-.417h-2zm-1.667 1h2.667v-2H9.666v2zm-3.25 1.583a1.5 1.5 0 00-1.5 1.5h2a.5.5 0 01-.5.5v-2zm9.167 0H6.416v2h9.167v-2zm1.5 1.5a1.5 1.5 0 00-1.5-1.5v2a.5.5 0 01-.5-.5h2zm0 8.25v-8.25h-2v8.25h2zm-1.5 1.5a1.5 1.5 0 001.5-1.5h-2a.5.5 0 01.5-.5v2zm-9.166 0h9.166v-2H6.417v2zm-1.5-1.5a1.5 1.5 0 001.5 1.5v-2a.5.5 0 01.5.5h-2zm0-8.25v8.25h2v-8.25h-2zm3 7.75v-7.25h-2v7.25h2zm7.166-1H6.917v2h8.166v-2zm-1-6.25v7.25h2v-7.25h-2zm-7.167 1h8.167v-2H6.916v2z"
                        fill="currentColor"
                        mask="url(#bin-main_svg__a)"
                      />
                      <g
                        opacity="0.3"
                      >
                        <mask
                          fill="#fff"
                          id="bin-main_svg__b"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M9.625 10.755a.5.5 0 01.5.5v4.062a.5.5 0 01-1 0v-4.062a.5.5 0 01.5-.5zm2.75 0a.5.5 0 01.5.5v4.062a.5.5 0 01-1 0v-4.062a.5.5 0 01.5-.5z"
                            fill-rule="evenodd"
                          />
                        </mask>
                        <path
                          d="M11.125 11.255a1.5 1.5 0 00-1.5-1.5v2a.5.5 0 01-.5-.5h2zm0 4.062v-4.062h-2v4.062h2zm-1.5 1.5a1.5 1.5 0 001.5-1.5h-2a.5.5 0 01.5-.5v2zm-1.5-1.5a1.5 1.5 0 001.5 1.5v-2a.5.5 0 01.5.5h-2zm0-4.062v4.062h2v-4.062h-2zm1.5-1.5a1.5 1.5 0 00-1.5 1.5h2a.5.5 0 01-.5.5v-2zm4.25 1.5a1.5 1.5 0 00-1.5-1.5v2a.5.5 0 01-.5-.5h2zm0 4.062v-4.062h-2v4.062h2zm-1.5 1.5a1.5 1.5 0 001.5-1.5h-2a.5.5 0 01.5-.5v2zm-1.5-1.5a1.5 1.5 0 001.5 1.5v-2a.5.5 0 01.5.5h-2zm0-4.062v4.062h2v-4.062h-2zm1.5-1.5a1.5 1.5 0 00-1.5 1.5h2a.5.5 0 01-.5.5v-2z"
                          fill="currentColor"
                          mask="url(#bin-main_svg__b)"
                        />
                      </g>
                    </g>
                  </svg>
                </span>
              </div>
            </span>
          </section>
        </section>
      </div>
    </div>
    <div>
      <div
        class="addArtifact"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--intent-primary"
        >
          <span>
            pipelineSteps.serviceTab.artifactList.addSidecar
          </span>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`ArtifactsSelection tests delete artifact list works correctly 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
    >
      <div
        class="artifactList listHeader"
      >
        <span
          class="tableHeader"
        />
        <span
          class="tableHeader"
        >
          artifactRepository
        </span>
        <span
          class="tableHeader"
        >
           
          location
        </span>
        <span
          class="tableHeader"
        />
        <span
          class="tableHeader"
        />
      </div>
      <div
        class="Layout--vertical StyledProps--main"
      >
        <section>
          <section
            class="artifactList rowItem"
          >
            <div>
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main type StyledProps--color StyledProps--color-black"
                style="--text-line-clamp: 1; width: 200px;"
              >
                primary
              </p>
            </div>
            <div
              class="connectorNameField"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--padding-right-small"
                data-icon="service-gcp"
              >
                <svg
                  height="18"
                  viewBox="0 0 14 12"
                  width="18"
                >
                  <mask
                    height="8.5"
                    id="service-gcp_svg__a"
                    maskUnits="userSpaceOnUse"
                    width="9.1"
                    x="0"
                    y="0"
                  >
                    <path
                      d="M0 0h9.1v8.5H0z"
                      fill="#fff"
                    />
                  </mask>
                  <path
                    d="M4.5 11L2 6.5 4.5 2h5L12 6.5 9.5 11z"
                    fill="#cac9c2"
                  />
                  <path
                    d="M7 7.8C5.9 7.8 5.1 7 5.1 6S5.9 4.1 7 4.1c1 0 1.9.9 1.9 1.9S8 7.8 7 7.8"
                    fill="#fff"
                  />
                  <path
                    d="M10.8.5c-.1-.3-.5-.5-.8-.5H4c-.3 0-.7.2-.9.5L1.4 3.4c0 .2 0 .4.1.5l1.2 2 2.1-3.6h6.8c.2 0 .3.1.5.2z"
                    fill="#5072aa"
                  />
                  <path
                    d="M1.4 3.3v.1c0 .2 0 .4.1.5l1.2 2 .6-1.1z"
                    fill="#4d6796"
                  />
                  <path
                    d="M4.1 1.5c-.2 0-.4-.2-.4-.4s.2-.4.4-.4.4.2.4.4c0 .3-.2.4-.4.4M10.2 1.2c0 .2-.2.3-.3.3s-.4-.1-.4-.3.2-.3.3-.3.4.1.4.3"
                    fill="#fff"
                  />
                  <path
                    d="M13.9 5.5l-1.8-3c-.2-.1-.3-.2-.5-.2H9.1L11.2 6l-3.3 5.7-.3.3H10c.3 0 .7-.2.8-.5l3-5c.2-.3.2-.7.1-1"
                    fill="#cc4232"
                  />
                  <path
                    d="M12.2 2.7l-.1-.1c-.2-.1-.3-.2-.5-.2H9.1l.6 1.1z"
                    fill="#b23f33"
                  />
                  <path
                    d="M9.8 11.1c-.2 0-.4-.2-.4-.4s.2-.4.4-.4.4.2.4.4-.2.4-.4.4M12.7 6.3c-.2 0-.4-.2-.4-.4s.2-.4.4-.4.4.2.4.4c0 .3-.2.4-.4.4"
                    fill="#fff"
                  />
                  <path
                    d="M4.9 6.1L1.5.5C1.4.4 1.4.2 1.4 0L.1 2.1c-.1.3-.1.7 0 .9l3 5c.2.3.6.5.9.5h3.6c.1-.1.3-.2.3-.3l1.2-2.1z"
                    fill="#ecb02a"
                    mask="url(#service-gcp_svg__a)"
                    transform="translate(0 3.421)"
                  />
                  <path
                    d="M7.4 11.9h.2c.1-.1.3-.2.3-.3l1.2-2.1H7.8z"
                    fill="#c79732"
                  />
                  <g
                    fill="#fff"
                  >
                    <path
                      d="M4.1 11.1c-.2 0-.4-.2-.4-.4s.2-.4.4-.4.4.2.4.4-.2.4-.4.4M1.2 6.3C1 6.3.9 6.2.9 6s.2-.4.4-.4.4.2.4.4c-.1.2-.3.3-.5.3"
                    />
                  </g>
                </svg>
              </span>
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main connectorName"
                style="--text-line-clamp: 1;"
              >
                
              </p>
              <span
                class="bp3-icon bp3-icon-full-circle StyledProps--main StyledProps--color"
                icon="full-circle"
              >
                <svg
                  data-icon="full-circle"
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <desc>
                    full-circle
                  </desc>
                  <path
                    d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div>
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main"
                style="--text-line-clamp: 1; width: 400px;"
              />
            </div>
            <span>
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main actionGrid"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="Edit"
                >
                  <svg
                    height="16"
                    viewBox="0 0 12 12"
                    width="16"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    >
                      <path
                        d="M8.66 1.823h0L2.244 8.239v1.75h1.75l6.416-6.416a1.75 1.75 0 00-1.75-1.75z"
                        stroke="#555770"
                      />
                      <path
                        d="M6.583 5.146l2.063-2.063"
                        opacity="0.3"
                        stroke="#606170"
                      />
                    </g>
                  </svg>
                </span>
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="bin-main"
                >
                  <svg
                    fill="none"
                    height="25"
                    viewBox="0 0 22 22"
                    width="25"
                  >
                    <g
                      opacity="0.6"
                    >
                      <mask
                        fill="#fff"
                        id="bin-main_svg__a"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M8.666 4.583a.5.5 0 01.5-.5h3.667a.5.5 0 01.5.5V5h2.25a.5.5 0 01.5.5v1.833a.5.5 0 01-.5.5H6.417a.5.5 0 01-.5-.5V5.5a.5.5 0 01.5-.5h2.25v-.417zm1 .5V5.5a.5.5 0 01-.5.5h-2.25v.833h8.167V6h-2.25a.5.5 0 01-.5-.5v-.417H9.666zm-3.75 4.083a.5.5 0 01.5-.5h9.167a.5.5 0 01.5.5v8.25a.5.5 0 01-.5.5H6.417a.5.5 0 01-.5-.5v-8.25zm1 .5v7.25h8.167v-7.25H6.916z"
                          fill-rule="evenodd"
                        />
                      </mask>
                      <path
                        d="M13.333 5h-1a1 1 0 001 1V5zM8.666 5v1a1 1 0 001-1h-1zm1 .083v-1a1 1 0 00-1 1h1zM6.916 6V5a1 1 0 00-1 1h1zm0 .833h-1a1 1 0 001 1v-1zm8.167 0v1a1 1 0 001-1h-1zm0-.833h1a1 1 0 00-1-1v1zm-2.75-.917h1a1 1 0 00-1-1v1zM6.916 16.916h-1a1 1 0 001 1v-1zm0-7.25v-1a1 1 0 00-1 1h1zm8.167 7.25v1a1 1 0 001-1h-1zm0-7.25h1a1 1 0 00-1-1v1zM9.166 3.083a1.5 1.5 0 00-1.5 1.5h2a.5.5 0 01-.5.5v-2zm3.667 0H9.166v2h3.667v-2zm1.5 1.5a1.5 1.5 0 00-1.5-1.5v2a.5.5 0 01-.5-.5h2zm0 .417v-.417h-2V5h2zm1.25-1h-2.25v2h2.25V4zm1.5 1.5a1.5 1.5 0 00-1.5-1.5v2a.5.5 0 01-.5-.5h2zm0 1.833V5.5h-2v1.833h2zm-1.5 1.5a1.5 1.5 0 001.5-1.5h-2a.5.5 0 01.5-.5v2zm-9.166 0h9.166v-2H6.417v2zm-1.5-1.5a1.5 1.5 0 001.5 1.5v-2a.5.5 0 01.5.5h-2zm0-1.833v1.833h2V5.5h-2zm1.5-1.5a1.5 1.5 0 00-1.5 1.5h2a.5.5 0 01-.5.5V4zm2.25 0h-2.25v2h2.25V4zm-1 .583V5h2v-.417h-2zm3 .917v-.417h-2V5.5h2zM9.166 7a1.5 1.5 0 001.5-1.5h-2a.5.5 0 01.5-.5v2zm-2.25 0h2.25V5h-2.25v2zm1-.167V6h-2v.833h2zm7.166-1H6.917v2h8.166v-2zm-1 .167v.833h2V6h-2zm-1.25 1h2.25V5h-2.25v2zm-1.5-1.5a1.5 1.5 0 001.5 1.5V5a.5.5 0 01.5.5h-2zm0-.417V5.5h2v-.417h-2zm-1.667 1h2.667v-2H9.666v2zm-3.25 1.583a1.5 1.5 0 00-1.5 1.5h2a.5.5 0 01-.5.5v-2zm9.167 0H6.416v2h9.167v-2zm1.5 1.5a1.5 1.5 0 00-1.5-1.5v2a.5.5 0 01-.5-.5h2zm0 8.25v-8.25h-2v8.25h2zm-1.5 1.5a1.5 1.5 0 001.5-1.5h-2a.5.5 0 01.5-.5v2zm-9.166 0h9.166v-2H6.417v2zm-1.5-1.5a1.5 1.5 0 001.5 1.5v-2a.5.5 0 01.5.5h-2zm0-8.25v8.25h2v-8.25h-2zm3 7.75v-7.25h-2v7.25h2zm7.166-1H6.917v2h8.166v-2zm-1-6.25v7.25h2v-7.25h-2zm-7.167 1h8.167v-2H6.916v2z"
                        fill="currentColor"
                        mask="url(#bin-main_svg__a)"
                      />
                      <g
                        opacity="0.3"
                      >
                        <mask
                          fill="#fff"
                          id="bin-main_svg__b"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M9.625 10.755a.5.5 0 01.5.5v4.062a.5.5 0 01-1 0v-4.062a.5.5 0 01.5-.5zm2.75 0a.5.5 0 01.5.5v4.062a.5.5 0 01-1 0v-4.062a.5.5 0 01.5-.5z"
                            fill-rule="evenodd"
                          />
                        </mask>
                        <path
                          d="M11.125 11.255a1.5 1.5 0 00-1.5-1.5v2a.5.5 0 01-.5-.5h2zm0 4.062v-4.062h-2v4.062h2zm-1.5 1.5a1.5 1.5 0 001.5-1.5h-2a.5.5 0 01.5-.5v2zm-1.5-1.5a1.5 1.5 0 001.5 1.5v-2a.5.5 0 01.5.5h-2zm0-4.062v4.062h2v-4.062h-2zm1.5-1.5a1.5 1.5 0 00-1.5 1.5h2a.5.5 0 01-.5.5v-2zm4.25 1.5a1.5 1.5 0 00-1.5-1.5v2a.5.5 0 01-.5-.5h2zm0 4.062v-4.062h-2v4.062h2zm-1.5 1.5a1.5 1.5 0 001.5-1.5h-2a.5.5 0 01.5-.5v2zm-1.5-1.5a1.5 1.5 0 001.5 1.5v-2a.5.5 0 01.5.5h-2zm0-4.062v4.062h2v-4.062h-2zm1.5-1.5a1.5 1.5 0 00-1.5 1.5h2a.5.5 0 01-.5.5v-2z"
                          fill="currentColor"
                          mask="url(#bin-main_svg__b)"
                        />
                      </g>
                    </g>
                  </svg>
                </span>
              </div>
            </span>
          </section>
        </section>
      </div>
    </div>
    <div>
      <div
        class="addArtifact"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--intent-primary"
        >
          <span>
            pipelineSteps.serviceTab.artifactList.addSidecar
          </span>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`ArtifactsSelection tests edit artifact list works correctly 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
    >
      <div
        class="artifactList listHeader"
      >
        <span
          class="tableHeader"
        />
        <span
          class="tableHeader"
        >
          artifactRepository
        </span>
        <span
          class="tableHeader"
        >
           
          location
        </span>
        <span
          class="tableHeader"
        />
        <span
          class="tableHeader"
        />
      </div>
      <div
        class="Layout--vertical StyledProps--main"
      >
        <section>
          <section
            class="artifactList rowItem"
          >
            <div>
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main type StyledProps--color StyledProps--color-black"
                style="--text-line-clamp: 1; width: 200px;"
              >
                primary
              </p>
            </div>
            <div
              class="connectorNameField"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--padding-right-small"
                data-icon="service-gcp"
              >
                <svg
                  height="18"
                  viewBox="0 0 14 12"
                  width="18"
                >
                  <mask
                    height="8.5"
                    id="service-gcp_svg__a"
                    maskUnits="userSpaceOnUse"
                    width="9.1"
                    x="0"
                    y="0"
                  >
                    <path
                      d="M0 0h9.1v8.5H0z"
                      fill="#fff"
                    />
                  </mask>
                  <path
                    d="M4.5 11L2 6.5 4.5 2h5L12 6.5 9.5 11z"
                    fill="#cac9c2"
                  />
                  <path
                    d="M7 7.8C5.9 7.8 5.1 7 5.1 6S5.9 4.1 7 4.1c1 0 1.9.9 1.9 1.9S8 7.8 7 7.8"
                    fill="#fff"
                  />
                  <path
                    d="M10.8.5c-.1-.3-.5-.5-.8-.5H4c-.3 0-.7.2-.9.5L1.4 3.4c0 .2 0 .4.1.5l1.2 2 2.1-3.6h6.8c.2 0 .3.1.5.2z"
                    fill="#5072aa"
                  />
                  <path
                    d="M1.4 3.3v.1c0 .2 0 .4.1.5l1.2 2 .6-1.1z"
                    fill="#4d6796"
                  />
                  <path
                    d="M4.1 1.5c-.2 0-.4-.2-.4-.4s.2-.4.4-.4.4.2.4.4c0 .3-.2.4-.4.4M10.2 1.2c0 .2-.2.3-.3.3s-.4-.1-.4-.3.2-.3.3-.3.4.1.4.3"
                    fill="#fff"
                  />
                  <path
                    d="M13.9 5.5l-1.8-3c-.2-.1-.3-.2-.5-.2H9.1L11.2 6l-3.3 5.7-.3.3H10c.3 0 .7-.2.8-.5l3-5c.2-.3.2-.7.1-1"
                    fill="#cc4232"
                  />
                  <path
                    d="M12.2 2.7l-.1-.1c-.2-.1-.3-.2-.5-.2H9.1l.6 1.1z"
                    fill="#b23f33"
                  />
                  <path
                    d="M9.8 11.1c-.2 0-.4-.2-.4-.4s.2-.4.4-.4.4.2.4.4-.2.4-.4.4M12.7 6.3c-.2 0-.4-.2-.4-.4s.2-.4.4-.4.4.2.4.4c0 .3-.2.4-.4.4"
                    fill="#fff"
                  />
                  <path
                    d="M4.9 6.1L1.5.5C1.4.4 1.4.2 1.4 0L.1 2.1c-.1.3-.1.7 0 .9l3 5c.2.3.6.5.9.5h3.6c.1-.1.3-.2.3-.3l1.2-2.1z"
                    fill="#ecb02a"
                    mask="url(#service-gcp_svg__a)"
                    transform="translate(0 3.421)"
                  />
                  <path
                    d="M7.4 11.9h.2c.1-.1.3-.2.3-.3l1.2-2.1H7.8z"
                    fill="#c79732"
                  />
                  <g
                    fill="#fff"
                  >
                    <path
                      d="M4.1 11.1c-.2 0-.4-.2-.4-.4s.2-.4.4-.4.4.2.4.4-.2.4-.4.4M1.2 6.3C1 6.3.9 6.2.9 6s.2-.4.4-.4.4.2.4.4c-.1.2-.3.3-.5.3"
                    />
                  </g>
                </svg>
              </span>
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main connectorName"
                style="--text-line-clamp: 1;"
              >
                
              </p>
              <span
                class="bp3-icon bp3-icon-full-circle StyledProps--main StyledProps--color"
                icon="full-circle"
              >
                <svg
                  data-icon="full-circle"
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <desc>
                    full-circle
                  </desc>
                  <path
                    d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div>
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main"
                style="--text-line-clamp: 1; width: 400px;"
              />
            </div>
            <span>
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main actionGrid"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="Edit"
                >
                  <svg
                    height="16"
                    viewBox="0 0 12 12"
                    width="16"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    >
                      <path
                        d="M8.66 1.823h0L2.244 8.239v1.75h1.75l6.416-6.416a1.75 1.75 0 00-1.75-1.75z"
                        stroke="#555770"
                      />
                      <path
                        d="M6.583 5.146l2.063-2.063"
                        opacity="0.3"
                        stroke="#606170"
                      />
                    </g>
                  </svg>
                </span>
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="bin-main"
                >
                  <svg
                    fill="none"
                    height="25"
                    viewBox="0 0 22 22"
                    width="25"
                  >
                    <g
                      opacity="0.6"
                    >
                      <mask
                        fill="#fff"
                        id="bin-main_svg__a"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M8.666 4.583a.5.5 0 01.5-.5h3.667a.5.5 0 01.5.5V5h2.25a.5.5 0 01.5.5v1.833a.5.5 0 01-.5.5H6.417a.5.5 0 01-.5-.5V5.5a.5.5 0 01.5-.5h2.25v-.417zm1 .5V5.5a.5.5 0 01-.5.5h-2.25v.833h8.167V6h-2.25a.5.5 0 01-.5-.5v-.417H9.666zm-3.75 4.083a.5.5 0 01.5-.5h9.167a.5.5 0 01.5.5v8.25a.5.5 0 01-.5.5H6.417a.5.5 0 01-.5-.5v-8.25zm1 .5v7.25h8.167v-7.25H6.916z"
                          fill-rule="evenodd"
                        />
                      </mask>
                      <path
                        d="M13.333 5h-1a1 1 0 001 1V5zM8.666 5v1a1 1 0 001-1h-1zm1 .083v-1a1 1 0 00-1 1h1zM6.916 6V5a1 1 0 00-1 1h1zm0 .833h-1a1 1 0 001 1v-1zm8.167 0v1a1 1 0 001-1h-1zm0-.833h1a1 1 0 00-1-1v1zm-2.75-.917h1a1 1 0 00-1-1v1zM6.916 16.916h-1a1 1 0 001 1v-1zm0-7.25v-1a1 1 0 00-1 1h1zm8.167 7.25v1a1 1 0 001-1h-1zm0-7.25h1a1 1 0 00-1-1v1zM9.166 3.083a1.5 1.5 0 00-1.5 1.5h2a.5.5 0 01-.5.5v-2zm3.667 0H9.166v2h3.667v-2zm1.5 1.5a1.5 1.5 0 00-1.5-1.5v2a.5.5 0 01-.5-.5h2zm0 .417v-.417h-2V5h2zm1.25-1h-2.25v2h2.25V4zm1.5 1.5a1.5 1.5 0 00-1.5-1.5v2a.5.5 0 01-.5-.5h2zm0 1.833V5.5h-2v1.833h2zm-1.5 1.5a1.5 1.5 0 001.5-1.5h-2a.5.5 0 01.5-.5v2zm-9.166 0h9.166v-2H6.417v2zm-1.5-1.5a1.5 1.5 0 001.5 1.5v-2a.5.5 0 01.5.5h-2zm0-1.833v1.833h2V5.5h-2zm1.5-1.5a1.5 1.5 0 00-1.5 1.5h2a.5.5 0 01-.5.5V4zm2.25 0h-2.25v2h2.25V4zm-1 .583V5h2v-.417h-2zm3 .917v-.417h-2V5.5h2zM9.166 7a1.5 1.5 0 001.5-1.5h-2a.5.5 0 01.5-.5v2zm-2.25 0h2.25V5h-2.25v2zm1-.167V6h-2v.833h2zm7.166-1H6.917v2h8.166v-2zm-1 .167v.833h2V6h-2zm-1.25 1h2.25V5h-2.25v2zm-1.5-1.5a1.5 1.5 0 001.5 1.5V5a.5.5 0 01.5.5h-2zm0-.417V5.5h2v-.417h-2zm-1.667 1h2.667v-2H9.666v2zm-3.25 1.583a1.5 1.5 0 00-1.5 1.5h2a.5.5 0 01-.5.5v-2zm9.167 0H6.416v2h9.167v-2zm1.5 1.5a1.5 1.5 0 00-1.5-1.5v2a.5.5 0 01-.5-.5h2zm0 8.25v-8.25h-2v8.25h2zm-1.5 1.5a1.5 1.5 0 001.5-1.5h-2a.5.5 0 01.5-.5v2zm-9.166 0h9.166v-2H6.417v2zm-1.5-1.5a1.5 1.5 0 001.5 1.5v-2a.5.5 0 01.5.5h-2zm0-8.25v8.25h2v-8.25h-2zm3 7.75v-7.25h-2v7.25h2zm7.166-1H6.917v2h8.166v-2zm-1-6.25v7.25h2v-7.25h-2zm-7.167 1h8.167v-2H6.916v2z"
                        fill="currentColor"
                        mask="url(#bin-main_svg__a)"
                      />
                      <g
                        opacity="0.3"
                      >
                        <mask
                          fill="#fff"
                          id="bin-main_svg__b"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M9.625 10.755a.5.5 0 01.5.5v4.062a.5.5 0 01-1 0v-4.062a.5.5 0 01.5-.5zm2.75 0a.5.5 0 01.5.5v4.062a.5.5 0 01-1 0v-4.062a.5.5 0 01.5-.5z"
                            fill-rule="evenodd"
                          />
                        </mask>
                        <path
                          d="M11.125 11.255a1.5 1.5 0 00-1.5-1.5v2a.5.5 0 01-.5-.5h2zm0 4.062v-4.062h-2v4.062h2zm-1.5 1.5a1.5 1.5 0 001.5-1.5h-2a.5.5 0 01.5-.5v2zm-1.5-1.5a1.5 1.5 0 001.5 1.5v-2a.5.5 0 01.5.5h-2zm0-4.062v4.062h2v-4.062h-2zm1.5-1.5a1.5 1.5 0 00-1.5 1.5h2a.5.5 0 01-.5.5v-2zm4.25 1.5a1.5 1.5 0 00-1.5-1.5v2a.5.5 0 01-.5-.5h2zm0 4.062v-4.062h-2v4.062h2zm-1.5 1.5a1.5 1.5 0 001.5-1.5h-2a.5.5 0 01.5-.5v2zm-1.5-1.5a1.5 1.5 0 001.5 1.5v-2a.5.5 0 01.5.5h-2zm0-4.062v4.062h2v-4.062h-2zm1.5-1.5a1.5 1.5 0 00-1.5 1.5h2a.5.5 0 01-.5.5v-2z"
                          fill="currentColor"
                          mask="url(#bin-main_svg__b)"
                        />
                      </g>
                    </g>
                  </svg>
                </span>
              </div>
            </span>
          </section>
        </section>
      </div>
    </div>
    <div>
      <div
        class="addArtifact"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--intent-primary"
        >
          <span>
            pipelineSteps.serviceTab.artifactList.addSidecar
          </span>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`ArtifactsSelection tests renders Artifact Listview with connectors Data 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
    >
      <div
        class="artifactList listHeader"
      >
        <span
          class="tableHeader"
        />
        <span
          class="tableHeader"
        >
          artifactRepository
        </span>
        <span
          class="tableHeader"
        >
           
          location
        </span>
        <span
          class="tableHeader"
        />
        <span
          class="tableHeader"
        />
      </div>
      <div
        class="Layout--vertical StyledProps--main"
      >
        <section>
          <section
            class="artifactList rowItem"
          >
            <div>
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main type StyledProps--color StyledProps--color-black"
                style="--text-line-clamp: 1; width: 200px;"
              >
                primary
              </p>
            </div>
            <div
              class="connectorNameField"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--padding-right-small"
                data-icon="service-gcp"
              >
                <svg
                  height="18"
                  viewBox="0 0 14 12"
                  width="18"
                >
                  <mask
                    height="8.5"
                    id="service-gcp_svg__a"
                    maskUnits="userSpaceOnUse"
                    width="9.1"
                    x="0"
                    y="0"
                  >
                    <path
                      d="M0 0h9.1v8.5H0z"
                      fill="#fff"
                    />
                  </mask>
                  <path
                    d="M4.5 11L2 6.5 4.5 2h5L12 6.5 9.5 11z"
                    fill="#cac9c2"
                  />
                  <path
                    d="M7 7.8C5.9 7.8 5.1 7 5.1 6S5.9 4.1 7 4.1c1 0 1.9.9 1.9 1.9S8 7.8 7 7.8"
                    fill="#fff"
                  />
                  <path
                    d="M10.8.5c-.1-.3-.5-.5-.8-.5H4c-.3 0-.7.2-.9.5L1.4 3.4c0 .2 0 .4.1.5l1.2 2 2.1-3.6h6.8c.2 0 .3.1.5.2z"
                    fill="#5072aa"
                  />
                  <path
                    d="M1.4 3.3v.1c0 .2 0 .4.1.5l1.2 2 .6-1.1z"
                    fill="#4d6796"
                  />
                  <path
                    d="M4.1 1.5c-.2 0-.4-.2-.4-.4s.2-.4.4-.4.4.2.4.4c0 .3-.2.4-.4.4M10.2 1.2c0 .2-.2.3-.3.3s-.4-.1-.4-.3.2-.3.3-.3.4.1.4.3"
                    fill="#fff"
                  />
                  <path
                    d="M13.9 5.5l-1.8-3c-.2-.1-.3-.2-.5-.2H9.1L11.2 6l-3.3 5.7-.3.3H10c.3 0 .7-.2.8-.5l3-5c.2-.3.2-.7.1-1"
                    fill="#cc4232"
                  />
                  <path
                    d="M12.2 2.7l-.1-.1c-.2-.1-.3-.2-.5-.2H9.1l.6 1.1z"
                    fill="#b23f33"
                  />
                  <path
                    d="M9.8 11.1c-.2 0-.4-.2-.4-.4s.2-.4.4-.4.4.2.4.4-.2.4-.4.4M12.7 6.3c-.2 0-.4-.2-.4-.4s.2-.4.4-.4.4.2.4.4c0 .3-.2.4-.4.4"
                    fill="#fff"
                  />
                  <path
                    d="M4.9 6.1L1.5.5C1.4.4 1.4.2 1.4 0L.1 2.1c-.1.3-.1.7 0 .9l3 5c.2.3.6.5.9.5h3.6c.1-.1.3-.2.3-.3l1.2-2.1z"
                    fill="#ecb02a"
                    mask="url(#service-gcp_svg__a)"
                    transform="translate(0 3.421)"
                  />
                  <path
                    d="M7.4 11.9h.2c.1-.1.3-.2.3-.3l1.2-2.1H7.8z"
                    fill="#c79732"
                  />
                  <g
                    fill="#fff"
                  >
                    <path
                      d="M4.1 11.1c-.2 0-.4-.2-.4-.4s.2-.4.4-.4.4.2.4.4-.2.4-.4.4M1.2 6.3C1 6.3.9 6.2.9 6s.2-.4.4-.4.4.2.4.4c-.1.2-.3.3-.5.3"
                    />
                  </g>
                </svg>
              </span>
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main connectorName"
                style="--text-line-clamp: 1;"
              >
                
              </p>
              <span
                class="bp3-icon bp3-icon-full-circle StyledProps--main StyledProps--color"
                icon="full-circle"
              >
                <svg
                  data-icon="full-circle"
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <desc>
                    full-circle
                  </desc>
                  <path
                    d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div>
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main"
                style="--text-line-clamp: 1; width: 400px;"
              />
            </div>
          </section>
        </section>
      </div>
    </div>
    <div>
      <div
        class="addArtifact"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--intent-primary"
        >
          <span>
            pipelineSteps.serviceTab.artifactList.addSidecar
          </span>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`ArtifactsSelection tests renders Artifact Listview without crashing 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
    >
      <div
        class="artifactList listHeader"
      >
        <span
          class="tableHeader"
        />
        <span
          class="tableHeader"
        >
          artifactRepository
        </span>
        <span
          class="tableHeader"
        >
           
          location
        </span>
        <span
          class="tableHeader"
        />
        <span
          class="tableHeader"
        />
      </div>
      <div
        class="Layout--vertical StyledProps--main"
      >
        <section>
          <section
            class="artifactList rowItem"
          >
            <div>
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main type StyledProps--color StyledProps--color-black"
                style="--text-line-clamp: 1; width: 200px;"
              >
                primary
              </p>
            </div>
            <div
              class="connectorNameField"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--padding-right-small"
                data-icon="service-dockerhub"
              >
                <svg
                  height="18"
                  viewBox="0 0 14 10"
                  width="18"
                >
                  <path
                    d="M5.8 3.3h1.3v1.3H5.8zM7.2 3.3h1.3v1.3H7.2zM4.3 3.3h1.3v1.3H4.3zM2.9 3.3h1.3v1.3H2.9zM1.4 3.3h1.3v1.3H1.4zM5.8 1.9h1.3v1.3H5.8zM5.8.4h1.3v1.3H5.8zM4.3 1.9h1.3v1.3H4.3zM2.9 1.9h1.3v1.3H2.9z"
                  />
                  <path
                    d="M.8 7.7c-.1-.2-.2-.3-.3-.4l-.1-.2c0-.1-.1-.2-.1-.4v-.2C.1 6.1 0 5.7 0 5.2v-.4h9.5c.7 0 1.4-.2 1.7-.5-.2-.2-.4-.6-.4-1 0-.5.1-1 .3-1.3l.1-.1.1.1c.3.2.9.8.9 1.6.3-.1.5-.1.8-.1.4 0 .7.1.9.2h.1v.1c-.3.6-1 .9-1.8.9h-.3c-1.2 3-3.7 4.6-7.3 4.6-.6 0-1.2-.1-1.8-.3-.7-.2-1.3-.6-1.8-1.1zm4.4 1.4c-.9-.4-1.3-.9-1.6-1.5-.4.1-.7.1-1.2.2H1.2C2 8.6 3 9.1 4.8 9.1zm-1-2.4c-.2 0-.3.2-.3.3 0 .2.2.3.3.3.2 0 .3-.2.3-.3s-.1-.3-.3-.3z"
                  />
                  <path
                    d="M4.2 6.8s.1 0 0 0c.1 0 .1.1 0 0 .1.2.1.2.2.2 0 0 .1 0 .1-.1V7c0 .1-.1.3-.3.3S4 7.2 4 7c0-.1.1-.2.2-.2"
                  />
                </svg>
              </span>
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main connectorName"
                style="--text-line-clamp: 1;"
              >
                
              </p>
              <span
                class="bp3-icon bp3-icon-full-circle StyledProps--main StyledProps--color"
                icon="full-circle"
              >
                <svg
                  data-icon="full-circle"
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <desc>
                    full-circle
                  </desc>
                  <path
                    d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div>
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main"
                style="--text-line-clamp: 1; width: 400px;"
              />
            </div>
          </section>
        </section>
      </div>
    </div>
    <div>
      <div
        class="addArtifact"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--intent-primary"
        >
          <span>
            pipelineSteps.serviceTab.artifactList.addSidecar
          </span>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`ArtifactsSelection tests renders add Artifact option without crashing 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
    >
      <div
        class="Layout--vertical StyledProps--main"
      >
        <section />
      </div>
    </div>
    <div>
      <div
        class="addArtifact"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--intent-primary"
        >
          <span>
            pipelineSteps.serviceTab.artifactList.addPrimary
          </span>
        </p>
      </div>
      <div
        class="addArtifact"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--intent-primary"
        >
          <span>
            pipelineSteps.serviceTab.artifactList.addSidecar
          </span>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`ArtifactsSelection tests renders artifact with override without crashing: renders artifact with override without crashing 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
    >
      <div
        class="Layout--vertical StyledProps--main"
      >
        <section />
      </div>
    </div>
    <div>
      <div
        class="addArtifact"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--intent-primary"
        >
          <span>
            pipelineSteps.serviceTab.artifactList.addPrimary
          </span>
        </p>
      </div>
      <div
        class="addArtifact"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--intent-primary"
        >
          <span>
            pipelineSteps.serviceTab.artifactList.addSidecar
          </span>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`ArtifactsSelection tests renders without crashing 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
    >
      <div
        class="artifactList listHeader"
      >
        <span
          class="tableHeader"
        />
        <span
          class="tableHeader"
        >
          artifactRepository
        </span>
        <span
          class="tableHeader"
        >
           
          location
        </span>
        <span
          class="tableHeader"
        />
        <span
          class="tableHeader"
        />
      </div>
      <div
        class="Layout--vertical StyledProps--main"
      >
        <section>
          <section
            class="artifactList rowItem"
          >
            <div>
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main type StyledProps--color StyledProps--color-black"
                style="--text-line-clamp: 1; width: 200px;"
              >
                primary
              </p>
            </div>
            <div
              class="connectorNameField"
            >
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main connectorName"
                style="--text-line-clamp: 1;"
              >
                
              </p>
            </div>
            <div>
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main"
                style="--text-line-clamp: 1; width: 400px;"
              >
                &lt;+input&gt;
              </p>
            </div>
            <span>
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main actionGrid"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="Edit"
                >
                  <svg
                    height="16"
                    viewBox="0 0 12 12"
                    width="16"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    >
                      <path
                        d="M8.66 1.823h0L2.244 8.239v1.75h1.75l6.416-6.416a1.75 1.75 0 00-1.75-1.75z"
                        stroke="#555770"
                      />
                      <path
                        d="M6.583 5.146l2.063-2.063"
                        opacity="0.3"
                        stroke="#606170"
                      />
                    </g>
                  </svg>
                </span>
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="bin-main"
                >
                  <svg
                    fill="none"
                    height="25"
                    viewBox="0 0 22 22"
                    width="25"
                  >
                    <g
                      opacity="0.6"
                    >
                      <mask
                        fill="#fff"
                        id="bin-main_svg__a"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M8.666 4.583a.5.5 0 01.5-.5h3.667a.5.5 0 01.5.5V5h2.25a.5.5 0 01.5.5v1.833a.5.5 0 01-.5.5H6.417a.5.5 0 01-.5-.5V5.5a.5.5 0 01.5-.5h2.25v-.417zm1 .5V5.5a.5.5 0 01-.5.5h-2.25v.833h8.167V6h-2.25a.5.5 0 01-.5-.5v-.417H9.666zm-3.75 4.083a.5.5 0 01.5-.5h9.167a.5.5 0 01.5.5v8.25a.5.5 0 01-.5.5H6.417a.5.5 0 01-.5-.5v-8.25zm1 .5v7.25h8.167v-7.25H6.916z"
                          fill-rule="evenodd"
                        />
                      </mask>
                      <path
                        d="M13.333 5h-1a1 1 0 001 1V5zM8.666 5v1a1 1 0 001-1h-1zm1 .083v-1a1 1 0 00-1 1h1zM6.916 6V5a1 1 0 00-1 1h1zm0 .833h-1a1 1 0 001 1v-1zm8.167 0v1a1 1 0 001-1h-1zm0-.833h1a1 1 0 00-1-1v1zm-2.75-.917h1a1 1 0 00-1-1v1zM6.916 16.916h-1a1 1 0 001 1v-1zm0-7.25v-1a1 1 0 00-1 1h1zm8.167 7.25v1a1 1 0 001-1h-1zm0-7.25h1a1 1 0 00-1-1v1zM9.166 3.083a1.5 1.5 0 00-1.5 1.5h2a.5.5 0 01-.5.5v-2zm3.667 0H9.166v2h3.667v-2zm1.5 1.5a1.5 1.5 0 00-1.5-1.5v2a.5.5 0 01-.5-.5h2zm0 .417v-.417h-2V5h2zm1.25-1h-2.25v2h2.25V4zm1.5 1.5a1.5 1.5 0 00-1.5-1.5v2a.5.5 0 01-.5-.5h2zm0 1.833V5.5h-2v1.833h2zm-1.5 1.5a1.5 1.5 0 001.5-1.5h-2a.5.5 0 01.5-.5v2zm-9.166 0h9.166v-2H6.417v2zm-1.5-1.5a1.5 1.5 0 001.5 1.5v-2a.5.5 0 01.5.5h-2zm0-1.833v1.833h2V5.5h-2zm1.5-1.5a1.5 1.5 0 00-1.5 1.5h2a.5.5 0 01-.5.5V4zm2.25 0h-2.25v2h2.25V4zm-1 .583V5h2v-.417h-2zm3 .917v-.417h-2V5.5h2zM9.166 7a1.5 1.5 0 001.5-1.5h-2a.5.5 0 01.5-.5v2zm-2.25 0h2.25V5h-2.25v2zm1-.167V6h-2v.833h2zm7.166-1H6.917v2h8.166v-2zm-1 .167v.833h2V6h-2zm-1.25 1h2.25V5h-2.25v2zm-1.5-1.5a1.5 1.5 0 001.5 1.5V5a.5.5 0 01.5.5h-2zm0-.417V5.5h2v-.417h-2zm-1.667 1h2.667v-2H9.666v2zm-3.25 1.583a1.5 1.5 0 00-1.5 1.5h2a.5.5 0 01-.5.5v-2zm9.167 0H6.416v2h9.167v-2zm1.5 1.5a1.5 1.5 0 00-1.5-1.5v2a.5.5 0 01-.5-.5h2zm0 8.25v-8.25h-2v8.25h2zm-1.5 1.5a1.5 1.5 0 001.5-1.5h-2a.5.5 0 01.5-.5v2zm-9.166 0h9.166v-2H6.417v2zm-1.5-1.5a1.5 1.5 0 001.5 1.5v-2a.5.5 0 01.5.5h-2zm0-8.25v8.25h2v-8.25h-2zm3 7.75v-7.25h-2v7.25h2zm7.166-1H6.917v2h8.166v-2zm-1-6.25v7.25h2v-7.25h-2zm-7.167 1h8.167v-2H6.916v2z"
                        fill="currentColor"
                        mask="url(#bin-main_svg__a)"
                      />
                      <g
                        opacity="0.3"
                      >
                        <mask
                          fill="#fff"
                          id="bin-main_svg__b"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M9.625 10.755a.5.5 0 01.5.5v4.062a.5.5 0 01-1 0v-4.062a.5.5 0 01.5-.5zm2.75 0a.5.5 0 01.5.5v4.062a.5.5 0 01-1 0v-4.062a.5.5 0 01.5-.5z"
                            fill-rule="evenodd"
                          />
                        </mask>
                        <path
                          d="M11.125 11.255a1.5 1.5 0 00-1.5-1.5v2a.5.5 0 01-.5-.5h2zm0 4.062v-4.062h-2v4.062h2zm-1.5 1.5a1.5 1.5 0 001.5-1.5h-2a.5.5 0 01.5-.5v2zm-1.5-1.5a1.5 1.5 0 001.5 1.5v-2a.5.5 0 01.5.5h-2zm0-4.062v4.062h2v-4.062h-2zm1.5-1.5a1.5 1.5 0 00-1.5 1.5h2a.5.5 0 01-.5.5v-2zm4.25 1.5a1.5 1.5 0 00-1.5-1.5v2a.5.5 0 01-.5-.5h2zm0 4.062v-4.062h-2v4.062h2zm-1.5 1.5a1.5 1.5 0 001.5-1.5h-2a.5.5 0 01.5-.5v2zm-1.5-1.5a1.5 1.5 0 001.5 1.5v-2a.5.5 0 01.5.5h-2zm0-4.062v4.062h2v-4.062h-2zm1.5-1.5a1.5 1.5 0 00-1.5 1.5h2a.5.5 0 01-.5.5v-2z"
                          fill="currentColor"
                          mask="url(#bin-main_svg__b)"
                        />
                      </g>
                    </g>
                  </svg>
                </span>
              </div>
            </span>
          </section>
        </section>
      </div>
    </div>
    <div>
      <div
        class="addArtifact"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--intent-primary"
        >
          <span>
            pipelineSteps.serviceTab.artifactList.addSidecar
          </span>
        </p>
      </div>
    </div>
  </div>
</div>
`;
